<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->
<resources>

  <!-- Button shown during a phone call to upgrade to video.
     [CHAR LIMIT=12] -->
  <string name="incall_label_videocall">Video call</string>

  <!-- Button shown during a phone call to upgrade to Real-time Text.
     [CHAR LIMIT=12] -->
  <string name="incall_label_rttcall">RTT</string>

  <!-- Button shown during a phone call to put the call on hold.
     [CHAR LIMIT=12] -->
  <string name="incall_label_hold">Hold</string>

  <!-- Button shown during a phone call to add a new phone call.
     [CHAR LIMIT=12] -->
  <string name="incall_label_add_call">Add call</string>

  <!-- Button shown during a phone call to mute the microphone.
     [CHAR LIMIT=12] -->
  <string name="incall_label_mute">Mute</string>

  <!-- Button shown during a phone call to end the call.
     [CHAR LIMIT=12] -->
  <string name="incall_label_end_call">End call</string>

  <!-- Button shown during a phone call to show the dialpad.
     [CHAR LIMIT=12] -->
  <string name="incall_label_dialpad">Keypad</string>

  <!-- Talkback text for speaker button status. [CHAR LIMIT=12] -->
  <string name="incall_talkback_speaker_on">, is on</string>

  <!-- Talkback text for speaker button status. [CHAR LIMIT=12] -->
  <string name="incall_talkback_speaker_off">, is Off</string>

  <!-- Button shown during a phone to merge two ongoing calls.
     [CHAR LIMIT=12] -->
  <string name="incall_label_merge">Merge</string>

  <!-- Button shown during a phone to show the manage conference call screen.
     [CHAR LIMIT=12] -->
  <string name="incall_label_manage">Manage</string>

  <string name="a11y_description_incall_label_manage_content">Manage callers</string>

  <!-- Button shown during a phone to swap from the foreground call to the background call.
     [CHAR LIMIT=12] -->
  <string name="incall_label_swap">Swap</string>


  <!-- Button shown during a call with a multi-SIM device to hang up and call with the other SIM
     instead. [CHAR LIMIT=12] -->
  <string name="incall_label_swap_sim">Change SIM</string>

  <!-- Used to inform the user that the note associated with an outgoing call has been sent.
       [CHAR LIMIT=32] -->
  <string name="incall_note_sent">Note sent</string>

  <!-- Message shown briefly when automatic call recording starts. [CHAR LIMIT=48] -->
  <string name="auto_call_recording_started_message">Automatic call recording is on</string>

  <!-- Short notification text for an incoming call that will be recorded automatically. [CHAR LIMIT=32] -->
  <string name="auto_call_recording_will_start_message">Will auto-record</string>

  <!-- Short warning text when automatic call recording needs microphone access. [CHAR LIMIT=32] -->
  <string name="auto_call_recording_mic_permission_message">Mic access needed</string>

  <!-- Short warning text when automatic call recording needs contacts access. [CHAR LIMIT=32] -->
  <string name="auto_call_recording_contacts_permission_message">Contacts access needed</string>

  <!-- Short warning text when automatic call recording needs microphone and contacts access. [CHAR LIMIT=32] -->
  <string name="auto_call_recording_permissions_message">Mic and contacts needed</string>

</resources>
