<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginStart="@dimen/incall_window_margin_horizontal"
  android:layout_marginEnd="@dimen/incall_window_margin_horizontal"
  tools:showIn="@layout/frag_incall_voice">
  <com.android.dialer.widget.MaxHeightScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:fadeScrollbars="false"
    android:scrollbars="vertical"
    android:scrollbarSize="8dp"
    app:maxHeight="@dimen/incall_button_grid_scroll_view_max_height">
    <GridLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:columnCount="3"
      android:orientation="horizontal">
      <com.android.incallui.incall.impl.CheckableLabeledButton
        android:id="@+id/incall_first_button"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:enabled="false"
        android:gravity="center"
        app:incall_labelText="@string/incall_label_mute"
        tools:background="#FFFF0000"
        tools:layout_height="@dimen/tools_button_height"
        tools:layout_width="@dimen/incall_labeled_button_size"/>
      <com.android.incallui.incall.impl.CheckableLabeledButton
        android:id="@+id/incall_second_button"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:enabled="false"
        android:gravity="center"
        app:incall_labelText="@string/incall_label_dialpad"
        tools:background="#FFFF0000"
        tools:layout_height="@dimen/tools_button_height"
        tools:layout_width="@dimen/incall_labeled_button_size"/>
      <com.android.incallui.incall.impl.CheckableLabeledButton
        android:id="@+id/incall_third_button"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:enabled="false"
        android:gravity="center"
        app:incall_labelText="@string/incall_label_speaker"
        tools:background="#FFFF0000"
        tools:layout_height="@dimen/tools_button_height"
        tools:layout_width="@dimen/incall_labeled_button_size"/>
      <com.android.incallui.incall.impl.CheckableLabeledButton
        android:id="@+id/incall_fourth_button"
        android:layout_marginTop="@dimen/incall_button_vertical_padding"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:gravity="center"
        app:incall_labelText="@string/incall_label_add_call"
        tools:background="#FFFF0000"
        tools:layout_height="@dimen/tools_button_height"
        tools:layout_width="@dimen/incall_labeled_button_size"/>
      <com.android.incallui.incall.impl.CheckableLabeledButton
        android:id="@+id/incall_fifth_button"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_marginTop="@dimen/incall_button_vertical_padding"
        android:gravity="center"
        app:incall_labelText="@string/incall_label_hold"
        tools:background="#FFFF0000"
        tools:layout_height="@dimen/tools_button_height"
        tools:layout_width="@dimen/incall_labeled_button_size"/>
      <com.android.incallui.incall.impl.CheckableLabeledButton
        android:id="@+id/incall_sixth_button"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_marginTop="@dimen/incall_button_vertical_padding"
        android:gravity="center"
        app:incall_labelText="@string/incall_label_videocall"
        tools:background="#FFFF0000"
        tools:layout_height="@dimen/tools_button_height"
        tools:layout_width="@dimen/incall_labeled_button_size"/>
      <com.android.incallui.incall.impl.CheckableLabeledButton
          android:id="@+id/incall_seventh_button"
          android:layout_width="0dp"
          android:layout_columnWeight="1"
          android:layout_marginTop="@dimen/incall_button_vertical_padding"
          android:gravity="center"
          tools:background="#FFFF0000"
          tools:layout_height="@dimen/tools_button_height"
          tools:layout_width="@dimen/incall_labeled_button_size"/>
      <com.android.incallui.incall.impl.CheckableLabeledButton
          android:id="@+id/incall_eighth_button"
          android:layout_width="0dp"
          android:layout_columnWeight="1"
          android:layout_marginTop="@dimen/incall_button_vertical_padding"
          android:gravity="center"
          tools:background="#FFFF0000"
          tools:layout_height="@dimen/tools_button_height"
          tools:layout_width="@dimen/incall_labeled_button_size"/>
      <com.android.incallui.incall.impl.CheckableLabeledButton
          android:id="@+id/incall_ninth_button"
          android:layout_width="0dp"
          android:layout_columnWeight="1"
          android:layout_marginTop="@dimen/incall_button_vertical_padding"
          android:gravity="center"
          tools:background="#FFFF0000"
          tools:layout_height="@dimen/tools_button_height"
          tools:layout_width="@dimen/incall_labeled_button_size"/>
      <com.android.incallui.incall.impl.CheckableLabeledButton
          android:id="@+id/incall_tenth_button"
          android:layout_width="0dp"
          android:layout_columnWeight="1"
          android:layout_marginTop="@dimen/incall_button_vertical_padding"
          android:gravity="center"
          tools:background="#FFFF0000"
          tools:layout_height="@dimen/tools_button_height"
          tools:layout_width="@dimen/incall_labeled_button_size"/>
      <com.android.incallui.incall.impl.CheckableLabeledButton
          android:id="@+id/incall_eleventh_button"
          android:layout_width="0dp"
          android:layout_columnWeight="1"
          android:layout_marginTop="@dimen/incall_button_vertical_padding"
          android:gravity="center"
          tools:background="#FFFF0000"
          tools:layout_height="@dimen/tools_button_height"
          tools:layout_width="@dimen/incall_labeled_button_size"/>
      <com.android.incallui.incall.impl.CheckableLabeledButton
          android:id="@+id/incall_twelfth_button"
          android:layout_width="0dp"
          android:layout_columnWeight="1"
          android:layout_marginTop="@dimen/incall_button_vertical_padding"
          android:gravity="center"
          tools:background="#FFFF0000"
          tools:layout_height="@dimen/tools_button_height"
          tools:layout_width="@dimen/incall_labeled_button_size"/>
    </GridLayout>
  </com.android.dialer.widget.MaxHeightScrollView>
  <TextView
    android:id="@+id/auto_call_recording_message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center_horizontal"
    android:layout_marginStart="@dimen/incall_window_margin_horizontal"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="@dimen/incall_window_margin_horizontal"
    android:alpha="0"
    android:background="@drawable/auto_call_recording_message_background"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:maxLines="2"
    android:paddingStart="16dp"
    android:paddingTop="10dp"
    android:paddingEnd="16dp"
    android:paddingBottom="10dp"
    android:text="@string/auto_call_recording_started_message"
    android:textColor="#DE000000"
    android:textSize="14sp"
    android:visibility="gone"/>
</FrameLayout>
